# modern-cmake-for-cpp

./: .gitignore  README.md
ch01/hello/: CMakeLists.txt  hello.cpp
ch01/module/: CMakeLists.txt
ch01/script/: script.cmake
ch02/arguments/: bracket.cmake  quoted.cmake  unquoted.cmake
ch02/definitions/: function.cmake  macro.cmake
ch02/environment/: CMakeLists.txt
ch02/loops/: foreach.cmake
ch02/procedural/: CMakeLists.txt
ch02/scope/: CMakeLists.txt
ch02/useful/: message_context.cmake  message_error.cmake
ch02/variables/: set.cmake
ch03/add_subdirectory/: CMakeLists.txt  main.cpp
ch03/add_subdirectory/cars/: CMakeLists.txt  car.cpp  car.h
ch03/features/: CMakeLists.txt
ch03/in_source/: CMakeCache.txt  CMakeLists.txt
ch03/structure/: CMakeLists.txt
ch03/structure/src/: CMakeLists.txt
ch03/test_run/: CMakeLists.txt  main.cpp
ch03/toolchain/: CMakeLists.txt  main.cpp
ch04/comand_hook/: CMakeLists.txt  main.cpp
ch04/command/: CMakeLists.txt  main.cpp  template.xyz
ch04/genex/: CMakeLists.txt
ch04/propagated/: CMakeLists.txt  empty.cpp
ch04/targets/: CMakeLists.txt
ch04/targets/src/: CMakeLists.txt
ch04/targets/src/calculation/: CMakeLists.txt  calculation.cpp  calculation.h
ch04/targets/src/draw/: CMakeLists.txt  draw.cpp  draw.h
ch04/targets/src/gui/: CMakeLists.txt  gui.cpp
ch04/targets/src/terminal/: CMakeLists.txt  terminal.cpp
ch05/definitions/: CMakeLists.txt  definitions.cpp
ch05/git/: CMakeLists.txt  print_commit.cpp
ch05/sources/: CMakeLists.txt  linux_gui.cpp  main.cpp  windows_gui.cpp
(+13 files in other folders)
